# aether

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  cpplint.py  input.conf  lint.sh  test.sh
.githooks/: pre-commit
cmake/: format-check.cmake
docs/: README.md
examples/: CMakeLists.txt
include/aether/: version.hpp
include/aether/analysis/: error_norms.hpp
include/aether/assembly/: assembler.hpp
include/aether/core/: geometry.hpp  types.hpp
include/aether/elements/: p1_element.hpp  reference_elements.hpp
include/aether/input/: input.hpp
include/aether/mesh/: mesh.hpp  quad.hpp  rectangle.hpp  square.hpp
include/aether/output/: output.hpp
include/aether/solver/: solver.hpp  time_stepper.hpp
src/: CMakeLists.txt  main.cpp
src/analysis/: CMakeLists.txt  error_norms.cpp
src/assembly/: CMakeLists.txt  assembler.cpp
src/elements/: CMakeLists.txt  p1_element.cpp
src/input/: CMakeLists.txt  input.cpp
src/mesh/: CMakeLists.txt  quad.cpp  rectangle.cpp  square.cpp
src/output/: CMakeLists.txt  output.cpp
src/solver/: CMakeLists.txt  solver.cpp  time_stepper.cpp
tests/: CMakeLists.txt  test_assembler.cpp  test_mesh.cpp  test_quad.cpp  test_reference_element.cpp  test_time_stepper.cpp  test_types.cpp  test_version.cpp
