add_subdirectory(mesh)
add_subdirectory(elements)
add_subdirectory(assembly)
add_subdirectory(solver)
add_subdirectory(analysis)
add_subdirectory(output)
add_subdirectory(input)

add_executable(aether main.cpp)
target_include_directories(aether PRIVATE ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(aether PRIVATE aether_mesh aether_analysis aether_solver aether_input aether_elements aether_assembly aether_output spdlog::spdlog_header_only Eigen3::Eigen pugixml::pugixml)